[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Assets/Fonts/PressStart2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Prefabs/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://src/Prefabs/MenuButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.913725, 0.921569, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Minder Shooter"
align = 1
valign = 1

[node name="Menu" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.0
margin_top = -67.0
margin_right = 86.0
margin_bottom = 67.0
custom_constants/vseparation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBTN" parent="Menu" instance=ExtResource( 4 )]
margin_right = 172.0
margin_bottom = 38.0
text = "Start"

[node name="DockBTN" parent="Menu" instance=ExtResource( 4 )]
margin_top = 48.0
margin_right = 172.0
margin_bottom = 86.0
text = "Dock"

[node name="ExitBTN" parent="Menu" instance=ExtResource( 4 )]
margin_top = 96.0
margin_right = 172.0
margin_bottom = 134.0
text = "Exit"

[connection signal="pressed" from="Menu/StartBTN" to="." method="_on_StartBTN_pressed"]
[connection signal="pressed" from="Menu/DockBTN" to="." method="_on_DockBTN_pressed"]
[connection signal="pressed" from="Menu/ExitBTN" to="." method="_on_ExitBTN_pressed"]
